[package]
name = "astroport-math"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
target = "wasm32-unknown-unknown"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = {version = "0.1.7", optional = true}
cosmwasm-std = "1.1"
itertools = "0.10"
cosmwasm-schema = "1.1"
thiserror = "1.0"
serde_json = "1.0.96"
